add book fields

--- a/2-library/views/book/view.ejs
+++ b/2-library/views/book/view.ejs
@@ -9,7 +9,13 @@
 
                 <h5 class="card-title"><%= book.title %></h5>
                 <p class="card-text"><%= book.description %>.</p>
-
+                <h6>Book Info</h6>
+                <div>
+                    <p class="card-text">Authors: <%= book.authors %>.</p>
+                    <p class="card-text">Cover: <%= book.fileCover %>.</p>
+                    <p class="card-text">FileName: <%= book.fileName %>.</p>
+                    <p class="card-text">Favorites: <%= book.favorite%>.</p>
+                </div>
                 <div class="text-right">
                     <a class="btn btn-sm btn-primary" href="/books/update/<%= book.id %>">
                         <i class="fa fa-pencil" aria-hidden="true"></i>
