--- a/2-library/views/book/form.ejs
+++ b/2-library/views/book/form.ejs
@@ -12,10 +12,37 @@
         <label for="inputDesc">Description</label>
         <textarea
                 rows="3"
-                name="desc"
+                name="description"
                 class="form-control"
                 id="inputDesc"
         ><%= book.desc %></textarea>
+    </div>
+
+    <div class="form-group">
+        <label for="inputAuthors">Authors</label>
+        <input type="text"
+                value="<%= book.authors %>"
+                name="authors"
+                class="form-control"
+                id="inputAuthors">
+        <label for="inputFavorite">Favorite</label>
+        <input type="text"
+            value="<%= book.favorite%>"
+            name="favorite"
+            class="form-control"
+            id="inputFavorite"
+        />
+        <label for="inputFileCover">FileCover</label>
+        <input type="text"
+                value="<%= book.fileCover %>"
+                name="fileCover"
+                class="form-control"
+                id="inputFileCover">
+        <label for="inputFileName">FileName</label>
+        <input type="text"
+                value="<%= book.fileName %>"
+                name="fileName"
+                class="form-control">
     </div>
 
     <div class="form-group text-right ">
